--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,14 +1,14 @@
 #header{
-	width: 100%;
+    width: 100%;
     min-height: 800px;
     max-height: 70vh;
-    background: $green url(/img/bg-min.jpg) no-repeat;
+    background: #57524f url(/img/bg-min.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
 .header-inner{
-	position: relative;
-	width: 100%;
+    position: relative;
+    width: 100%;
 }
 .header-overlay{
     display: flex;
@@ -18,22 +18,23 @@
     left: 0;
     top: 0;
     z-index: 10;
-	background-color: rgba(0, 0, 0, 0.1);
-	min-height: 800px;
-	width: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    min-height: 800px;
+    width: 100%;
 }
 .header-content {
-	height: 100%;
-	padding: 100px 140px 140px;
-	text-align: center;
-	width: 100%;
+    height: 100%;
+    padding: 100px 140px 140px;
+    text-align: center;
+    width: 100%;
 }
 .header-content h2 {
-    font-family: 'Open Sans', sans-serif;
-	font-size: 80px;
-	font-weight: bold;
+    //font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto Slab', serif;
+    font-size: 80px;
+    font-weight: bold;
     line-height: 1.4;
-	text-transform: uppercase;
+    text-transform: uppercase;
     color: $green;
     text-shadow: 0 7px 23px black;
 }
@@ -46,17 +47,31 @@
     color: #fff;
 }
 .header-btn{
-    margin: 0 auto;
+    float: initial;
     display: block;
+    max-width: 250px;
+    margin: 50px auto 0;
+    padding: 12px 21px;
     background-color: $purple !important;
-    color: #fff !important;
+    color: $dark-gray !important;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 15px;
+    background-image: none;
+    transition: background-image 0.4s ease-out;
+
+    &:focus,
+    &:hover {
+        color: $dark-gray !important;
+        background-image: linear-gradient(to top, #55c16f 0%, #f8bf4d 100%);
+        border: none;
+    }
 }
 .knowmore-btn:hover,
 .knowmore-btn:focus,
 .download-btn:hover,
 .download-btn:focus{
-	color: #fff;
-	text-decoration: none;
-	outline: none;
-
+    color: #fff;
+    text-decoration: none;
+    outline: none;
 }
