--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -4,8 +4,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding: 140px 0;
-    float: left;
-    display: inline;
+    // float: left;
+    // display: inline;
     width: 100%;
     min-height: 100vh;
 }
@@ -15,18 +15,23 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
+    padding: 140px 0;
 }
 #location {
     background-image: url(/img/bg-4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
+    padding: 140px 0;
 }
 #service {
+    float: initial !important;
+    display: block !important;
     background-image: url(/img/bg-5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
+    padding: 140px 0;
 }
 .welcome-area {
     float: left;
@@ -34,12 +39,45 @@
     width: 100%;
     margin-bottom: 70px;
 }
+.welcome-area__card {
+  padding-bottom: 0;
+}
+.welcome-area__card-inner {
+  background-color: transparent;
+}
 .welcome-area__text {
-    margin-bottom: 50px;
-    font-size: 24px;
-    line-height: 2;
+    background-color: #ede99d;
+    background-color: rgba(237, 233, 157, 0.7);
+    max-width: 500px;
+    margin: 0 auto 50px;
+    padding: 50px 24px 55px;
+    font-size: 21px;
+    line-height: 1.6;
     text-align: center;
     color: $dark-gray;
+}
+.welcome-area__footer {
+  position: relative;
+  max-width: 340px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: rgba(#edee9c, .8);
+  text-align: center;
+  color: $color-text;
+  font-size: 26px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -15px;
+    left: 0;
+    width: 340px;
+    height: 10px;
+    background: url(/img/dotted.png) no-repeat;
+  }
+}
+.welcome-area__card-btn {
+    margin: 26px auto;
 }
 .title-area {
     display: inline;
