--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -27,7 +27,9 @@
     width: 100%;
     max-width: 600px;
     margin: 140px auto 0;
-    padding: 0 30px 30px 30px;
+    padding: 30px;
+    padding-top: 0;
+    background-color: rgba(0, 103, 2, 0.59);
 }
 .contacts-text-field {
     width: 47%;
@@ -56,21 +58,31 @@
     //background-color: #eee;
 }
 .contacts-btn {
-    float: initial;
+    float: initial !important;
     width: 100%;
     height: 45px;
     margin: 0 auto;
     padding: 0 15px;
+    border: none;
+    outline: none;
     text-align: center;
     text-transform: uppercase;
     cursor: pointer;
-    border: 2px solid #fff !important;
-    color: #fff !important;
+    color: #fff;
+    transform: none;
 
-    &:hover,
-    &:focus {
-        border: none;
-        background-color: transparent;
-        color: $green;
-    }
+    // &:hover,
+    // &:focus {
+    //     border: none;
+    //     color: $green;
+    // }
+}
+
+.contacts-email {
+  font-size: 26px;
+  color: #083600;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+  font-family: $font;
 }
