--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,17 @@
 @import "components/variables";
 
-@import "vendor/animate";
+// @import "vendor/animate";
 @import "vendor/bootstrap";
-@import "vendor/font-awesome";
-@import "vendor/jquery.fancybox";
-@import "vendor/slick";
+// @import "vendor/font-awesome";
+// @import "vendor/jquery.fancybox";
+// @import "vendor/slick";
 
-@import "theme-color/default";
-@import "theme-color/green-theme";
+// @import "theme-color/default";
+// @import "theme-color/green-theme";
 
+@import "components/fonts";
 @import "components/typography";
+@import "components/card";
 
 @import "components/about";
 
@@ -18,19 +20,20 @@
 @import "components/menu";
 @import "components/navbar";
 
-@import "components/preloader";
-@import "components/scroll-to";
+// @import "components/preloader";
+// @import "components/scroll-to";
 
-@import "components/call-to-action";
-@import "components/client";
-@import "components/error-page";
-@import "components/team";
-@import "components/blog-banner";
-@import "components/blog";
+// @import "components/call-to-action";
+// @import "components/client";
+// @import "components/error-page";
+// @import "components/team";
+// @import "components/blog-banner";
+// @import "components/blog";
 @import "components/contact";
 @import "components/contacts";
 @import "components/map";
 @import "components/offer";
 @import "components/service";
+
 
 @import "components/adaptive";
