--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -8,7 +8,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     overflow-x: hidden !important;
-    color: #838282;
+    color: $color-text;
 }
 ul{
     padding: 0;
