Add few inner pages

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,5 +11,6 @@
 @import "components/card";
 @import "components/contacts";
 @import "components/map";
+@import "components/article";
 
 @import "components/adaptive";
