--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -1,33 +1,69 @@
 .article {
-    
+    background-color: #fff;
+    background-image: url(/img/bg-2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 140px 0;
+    width: 100%;
+    min-height: calc(100vh - 99px);
+
     &__inner {
-        
+        padding: 60px 80px;
+        background-color: rgba(255, 255, 255, 0.8);
     }
-    
+
     &__title {
-        
+        margin: 0 0 32px;
+        text-transform: uppercase;
     }
-    
+
     &__subtitle {
-        
+        margin: 32px 0 16px;
+        padding: 0;
+        color: $color-text;
+        font-size: 28px;
+        font-weight: 600;
+        letter-spacing: 2px;
+        line-height: 1.6;
     }
-    
+
     &__text {
-        
+        max-width: 710px;
+        margin: 26px 0;
+        font-family: $font;
+        font-size: 18px;
+        font-weight: 400;
+
         &--highligted {
-            
+            font-size: 24px;
+            text-align: center;
+            max-width: 100%;
+            margin: 36px auto;
+            padding: 24px 20%;
+            background-color: rgba(235, 239, 77, 0.7);
+        }
+
+        &--centered {
+            margin: 0 auto;
+            text-align: center;
         }
     }
-    
+
+    ul {
+        list-style-type: disc;
+    }
+
     &__list {
-        
+        max-width: 710px;
+        margin: 26px 0;
+        padding-left: 20px;
     }
-    
+
     &__list-item {
-        
+        margin-bottom: 26px;
     }
-    
+
     &__btn {
-        
+
     }
 }
