--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,12 +1,13 @@
 .card {
   position: relative;
-  max-width: 500px;
+  max-width: 600px;
   margin: 0 auto;
   padding: 0 11px 16px;
   background-color: rgba(#000, .2);
   color: #fff;
   font-family: $font;
   @include clearfix;
+  transform: translateY(-20px);
 
   &:nth-of-type(2) {
     margin-top: 80px;
@@ -34,6 +35,7 @@
 }
 
 .card-text {
+  margin-bottom: 16px;
   font-weight: 300;
 }
 
@@ -54,6 +56,15 @@
   color: #083600;
   text-transform: uppercase;
   transform: translateX(23px);
+}
+
+.card-list {
+  margin-bottom: 16px;
+  font-weight: 300;
+
+  li {
+    margin-bottom: 8px;
+  }
 }
 
 .card--service::before {
