--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -29,7 +29,7 @@
     font-size: 21px;
     line-height: 1.6;
     text-align: center;
-    color: $dark-gray;
+    color: #2d3e2d;
 }
 .welcome-area__footer {
   position: relative;
